<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AssessmentActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:onClick="deleteAssessmentFromScreen"
        android:shadowColor="#FFFFFF"
        android:text="@string/delete_assessment"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button98"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="568dp"
        android:layout_height="55dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="59dp"
        android:background="#D7000000"
        android:onClick="backToTerms"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/today" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="326dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="49dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button98"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment_name" />

            <EditText
                android:id="@+id/assessmentName"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:hint="@string/math_test" />

        </LinearLayout>

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notes" />

        <EditText
            android:id="@+id/assessmentNotes"
            android:layout_width="306dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/assessment_date" />

        <EditText
            android:id="@+id/productEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="12/23/2020" />

        <CheckBox
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:onClick="setNotification"
            android:text="Set Notification?" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="Assessment Type" />

        <EditText
            android:id="@+id/assessmentType"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Performance Assessment"
            android:inputType="textPersonName" />


    </LinearLayout>

    <Button
        android:id="@+id/button98"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:onClick="addAssessmentFromScreen"
        android:shadowColor="#FFFFFF"
        android:text="@string/save"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>